<resources>
    <string name="app_name">Handybag Of Holding</string>
    <string name="characters">Characters</string>

    <string-array name="sa_itemCategories">
        <item>Weapons</item>
        <item>Armour</item>
        <item>Consumables</item>
        <item>Other</item>
    </string-array>
    <string-array name="sa_armourProficiencies">
        <item>None</item>
        <item>Shield</item>
        <item>Light</item>
        <item>Medium</item>
        <item>Heavy</item>
    </string-array>
    <string-array name="sa_armourSlot">
        <item>Hands</item>
        <item>Helmet</item>
        <item>Cloak</item>
        <item>Torso</item>
        <item>Boots</item>
        <item>Necklace</item>
        <item>Ring</item>
        <item>Other</item>
    </string-array>
    <string-array name="sa_weaponSimpleProficiencyMelee">
        <item>Unarmed</item>
        <item>Club</item>
        <item>Dagger</item>
        <item>Greatclub</item>
        <item>Handaxe</item>
        <item>Javelin</item>
        <item>Light Hammer</item>
        <item>Mace</item>
        <item>Quarterstaff</item>
        <item>Sickle</item>
        <item>Spear</item>
    </string-array>
    <string-array name="sa_weaponSimpleProficiencyRanged">
        <item>Dart</item>
        <item>Light Crossbow</item>
        <item>Shortbow</item>
        <item>Sling</item>
    </string-array>
    <string-array name="sa_weaponMartialProficiencyMelee">
        <item>Battleaxe</item>
        <item>Dwarven Urgosh</item>
        <item>Elven Crescent Blade</item>
        <item>Flail</item>
        <item>Glave</item>
        <item>Greataxe</item>
        <item>Greatsword</item>
        <item>Halberd</item>
        <item>Lance</item>
        <item>Longsword</item>
        <item>Maul</item>
        <item>Morningstar</item>
        <item>Pike</item>
        <item>Rapier</item>
        <item>Scimtar</item>
        <item>Shortsword</item>
        <item>Spiked Chain</item>
        <item>Trident</item>
        <item>War Pick</item>
        <item>Warhammer</item>
        <item>Whip</item>
        <item>War Scythe</item>
    </string-array>
    <string-array name="sa_weaponMartialProficiencyRanged">
        <item>Blowgun</item>
        <item>Hand Crossbow</item>
        <item>Heavy Crossbow</item>
        <item>Great Bow</item>
        <item>Longbow</item>
        <item>Net</item>
    </string-array>
    <string-array name="sa_damageTypes">
        <item>Bludgeoning</item>
        <item>Piercing</item>
        <item>Slashing</item>
        <item>Acid</item>
        <item>Cold</item>
        <item>Fire</item>
        <item>Force</item>
        <item>Lightning</item>
        <item>Necrotic</item>
        <item>Poison</item>
        <item>Psychic</item>
        <item>Radiant</item>
        <item>Thunder</item>
    </string-array>
    <string-array name="sa_damageDice">
        <item>d4</item>
        <item>d6</item>
        <item>d8</item>
        <item>d10</item>
        <item>d12</item>
        <item>d20</item>
    </string-array>
    <string name="items">Items</string>
    <string name="all">all</string>
    <string name="weapons">weapons</string>
    <string name="armour">armour</string>
    <string name="consumables">consumables</string>
    <string name="other">other</string>
    <string name="add_new_item">Add new item</string>
    <string name="return_to_previous_view">Return to previous view</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="item_category">Item Category</string>
    <string name="item_name">Item Name</string>
    <string name="damage_type">Damage type</string>
    <string name="dice_count">Dice count</string>
    <string name="damage_dice">Damage Dice</string>
    <string name="notes">Notes</string>
    <string name="long_press_to_edit_notes">Long press to edit notes</string>
    <string name="proficiency_group">Proficiency Group</string>
    <string name="simple">Simple</string>
    <string name="martial">Martial</string>
    <string name="weapon_range">Weapon Range</string>
    <string name="melee">Melee</string>
    <string name="ranged">Ranged</string>
    <string name="weapon_proficiency">Weapon Proficiency</string>
    <string name="weapon_damage">Weapon Damage</string>
    <string name="count">Count</string>
    <string name="add_damage">Add damage</string>
    <string name="long_press_to_remove_damage">Long press to remove damage</string>
    <string name="group">Group</string>
    <string name="range">Range</string>
    <string name="proficiency">Proficiency</string>
    <string name="character_name">Character name</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="character_details">Character details</string>
    <string name="item_details">Item Details</string>
    <string name="weapons_Capital">Weapons</string>
    <string name="armour_Capital">Armour</string>
    <string name="consumables_Capital">Consumables</string>
    <string name="other_Capital">Other</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="handybag_of_holding_logo">Handybag of holding logo</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="register_exclamation">Register!</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="confirm_password">Confirm password</string>
    <string name="log_in_Exclamation">Log in!</string>
    <string name="selection_arrow">Selection arrow</string>
    <string name="warning">Warning</string>
    <string name="warning_message">Warning message</string>
    <string name="account">Account</string>
    <string name="login_Colon">Login:</string>
    <string name="account_login">Account Login</string>
    <string name="email">Email:</string>
    <string name="account_email">Account Email</string>
    <string name="sign_out">Sign out</string>
    <string name="create_new_character">Create new character</string>
    <string name="new_item">New Item</string>
    <string name="category">Category</string>
    <string name="ac_count">AC Count</string>
    <string name="ac">AC</string>
    <string name="slot">Slot</string>
    <string name="decrease_value">Decrease value</string>
    <string name="increase_value">Increase value</string>
    <string name="armour_class">Armour Class</string>
    <string name="equip_slot">Equip Slot</string>
    <string name="str">Str</string>
    <string name="con">Con</string>
    <string name="dex">Dex</string>
    <string name="txt_int">Int</string>
    <string name="wis">Wis</string>
    <string name="chr">Chr</string>
    <string name="ability_scores">Ability Scores</string>
    <string name="Q_forgot_password">Forgot password?</string>
    <string name="click_here">Click here!</string>
    <string name="send_request">Send request</string>
    <string name="return_to_login_screen">Return to login screen.</string>
    <string name="please_input_your_e_mail_address_nif_you_registered_with_it_you_will_be_sent_password_reset_request">Please input your e-mail address.\nIf you registered with it, you will be sent password reset request.</string>
    <string name="reset_password">Reset password</string>
</resources>