<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_margin="20dp"
    android:padding="10dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_gravity="center">

    <ImageView
        android:src="@drawable/baseline_warning_24"
        android:scaleType="fitCenter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="50dp"
        android:contentDescription="@string/warning" />

    <TextView
        android:id="@+id/tv_message"
        android:text="@string/warning_message"
        android:textAlignment="center"
        android:textSize="15sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="5dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingVertical="5dp">

        <TextView
            android:id="@+id/tv_cancel"
            android:text="@string/cancel"
            android:textAlignment="center"
            android:textSize="15sp"
            android:layout_marginHorizontal="5dp"
            android:layout_width="0px"
            android:layout_weight="1"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/tv_confirm"
            android:text="@string/confirm"
            android:textAlignment="center"
            android:textSize="15sp"
            android:layout_marginHorizontal="5dp"
            android:layout_width="0px"
            android:layout_weight="1"
            android:layout_height="wrap_content"/>

    </LinearLayout>

</LinearLayout>