<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.LoginActivity">

    <ScrollView
        android:id="@+id/sv_login"
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:fillViewport="true"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/b_loginConfirm"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:padding="5dp">
            <ImageView
                android:id="@+id/iv_logo"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_launcher_background"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:contentDescription="@string/handybag_of_holding_logo" />

            <EditText
                android:id="@+id/et_email"
                android:hint="@string/e_mail"
                android:textSize="20sp"
                android:inputType="textEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:autofillHints="AUTOFILL_HINT_EMAIL" />

            <EditText
                android:id="@+id/et_password"
                android:hint="@string/password"
                android:textSize="20sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:inputType="textPassword"
                android:autofillHints="AUTOFILL_HINT_PASSWORD" />
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/b_loginConfirm"
        android:text="@string/login"
        android:textSize="20sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="25dp"
        app:layout_constraintBottom_toTopOf="@id/ll_login"/>

    <LinearLayout
        android:id="@+id/ll_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="25dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/don_t_have_an_account"
            android:textSize="15sp"
            android:gravity="center" />

        <TextView
            android:id="@+id/tv_register"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/register_exclamation"
            android:textSize="15sp"
            android:gravity="center" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>