<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.LoginFragment">


<ScrollView
        android:id="@+id/sv_login"
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:fillViewport="true"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/b_loginConfirm"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:padding="5dp">
            <FrameLayout
                android:layout_width="210dp"
                android:layout_height="210dp"
                android:layout_gravity="center"
                android:layout_marginVertical="20dp"
                android:contentDescription="@string/handybag_of_holding_logo">

                <ImageView
                    android:layout_gravity="center"
                    android:layout_width="210dp"
                    android:layout_height="210dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/baseline_circle_24"
                    android:importantForAccessibility="no" />

                <ImageView
                    android:layout_gravity="center"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/icon"
                    android:importantForAccessibility="no" />
            </FrameLayout>


            <EditText
                android:id="@+id/et_email"
                android:hint="@string/e_mail"
                android:textSize="20sp"
                android:inputType="textEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:autofillHints="AUTOFILL_HINT_EMAIL" />

            <EditText
                android:id="@+id/et_password"
                android:hint="@string/password"
                android:textSize="20sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:inputType="textPassword"
                android:autofillHints="AUTOFILL_HINT_PASSWORD" />
            <LinearLayout
                android:layout_marginHorizontal="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/Q_forgot_password"
                    android:textSize="15sp"
                    android:gravity="start" />

                <TextView
                    android:id="@+id/tv_reset_password"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/click_here"
                    android:textSize="15sp"
                    android:textColor="@color/blue"
                    android:layout_marginHorizontal="15sp"
                    android:gravity="center" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/b_loginConfirm"
        android:text="@string/login"
        android:textSize="20sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="25dp"
        app:layout_constraintBottom_toTopOf="@id/ll_login"/>

    <LinearLayout
        android:id="@+id/ll_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="25dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/don_t_have_an_account"
            android:textSize="15sp"
            android:gravity="center" />

        <TextView
            android:id="@+id/tv_register"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/register_exclamation"
            android:textSize="15sp"
            android:textColor="@color/blue"
            android:gravity="center" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>