<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_marginTop="5dp"
    android:layout_marginHorizontal="5dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:text="@string/ability_scores"
        android:gravity="center"
        android:textSize="20sp"
        android:layout_margin="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TableRow
            android:layout_weight="1">
            <TextView
                android:text="@string/str"
                android:textSize="20sp"
                android:padding="1dp"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_gravity="center"/>
            <TextView
                android:text="@string/con"
                android:textSize="20sp"
                android:padding="1dp"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_gravity="center"/>
            <TextView
                android:text="@string/dex"
                android:textSize="20sp"
                android:padding="1dp"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_gravity="center"/>
            <TextView
                android:text="@string/txt_int"
                android:textSize="20sp"
                android:padding="1dp"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_gravity="center"/>
            <TextView
                android:text="@string/wis"
                android:textSize="20sp"
                android:padding="1dp"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_gravity="center"/>
            <TextView
                android:text="@string/chr"
                android:textSize="20sp"
                android:padding="1dp"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_gravity="center"/>
        </TableRow>
        <TableRow>
            <com.handybagofholding.tile.VerticalValueCounterTile
                android:id="@+id/strengthEdit"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="wrap_content"/>
            <com.handybagofholding.tile.VerticalValueCounterTile
                android:id="@+id/constitutionEdit"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="wrap_content"/>
            <com.handybagofholding.tile.VerticalValueCounterTile
                android:id="@+id/dexterityEdit"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="wrap_content"/>
            <com.handybagofholding.tile.VerticalValueCounterTile
                android:id="@+id/intelligenceEdit"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="wrap_content"/>
            <com.handybagofholding.tile.VerticalValueCounterTile
                android:id="@+id/wisdomEdit"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="wrap_content"/>
            <com.handybagofholding.tile.VerticalValueCounterTile
                android:id="@+id/charismaEdit"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="wrap_content"/>
        </TableRow>
    </TableLayout>
</LinearLayout>