<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.PasswordResetFragment">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0px"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/b_sendRequest"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5dp">
            <EditText
                android:id="@+id/et_email"
                android:hint="@string/e_mail"
                android:textSize="20sp"
                android:inputType="textEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:autofillHints="AUTOFILL_HINT_EMAIL" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="11sp"
                android:gravity="center"
                android:lines="2"
                android:text="@string/please_input_your_e_mail_address_nif_you_registered_with_it_you_will_be_sent_password_reset_request"/>
            <TextView
                android:id="@+id/tv_returnLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:gravity="center"
                android:layout_margin="10dp"
                android:textColor="@color/blue"
                android:text="@string/return_to_login_screen"/>
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/b_sendRequest"
        android:text="@string/send_request"
        android:textSize="20sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="25dp"
        app:layout_constraintBottom_toBottomOf="parent">
    </Button>

</androidx.constraintlayout.widget.ConstraintLayout>