<?xml version="1.0" encoding="utf-8"?>

<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginVertical="5dp"
    app:strokeColor="@color/black"
    app:strokeWidth="2dp"
    app:cardCornerRadius="10dp"
    android:elevation="1dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_gravity="center_vertical"
        android:padding="5dp">
        <ImageButton
            android:id="@+id/ib_decrease"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:scaleType="fitCenter"
            android:src="@drawable/baseline_remove_24"
            android:contentDescription="@string/decrease_value" />
        <TextView
            android:id="@+id/tv_itemCount"
            android:text="@string/count"
            android:layout_height="match_parent"
            android:layout_width="0px"
            android:layout_weight="1"
            android:textSize="20sp"
            android:textAlignment="center"
            android:textStyle="bold"
            android:padding="5dp"/>
        <ImageButton
            android:id="@+id/ib_increase"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:scaleType="fitCenter"
            android:src="@drawable/baseline_add_24"
            android:contentDescription="@string/increase_value" />
    </LinearLayout>

</com.google.android.material.card.MaterialCardView>