<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="5dp"
    android:layout_marginBottom="5dp"
    app:strokeColor="@color/black"
    app:strokeWidth="2dp"
    app:cardCornerRadius="10dp"
    android:elevation="1dp">

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_margin="10dp">

        <LinearLayout
            android:layout_width="0px"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:id="@+id/tv_itemName"
                android:text="@string/item_name"
                android:textSize="20sp"
                android:layout_width="match_parent"
                android:layout_height="0px"
                android:layout_weight="2"
                android:layout_marginBottom="5dp"/>
            <TextView
                android:id="@+id/tv_itemCategory"
                android:text="@string/item_category"
                android:textSize="11sp"
                android:layout_width="match_parent"
                android:layout_height="0px"
                android:layout_weight="1"/>
        </LinearLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/baseline_arrow_forward_ios_24"
            android:contentDescription="@string/selection_arrow" />

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>