<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.ItemAddFragment">

    <LinearLayout
        android:id="@+id/ll_topBar"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/new_item"
            android:textSize="20sp"
            android:textAlignment="center"
            android:textStyle="bold"
            android:layout_marginVertical="10dp"
            android:layout_width="0px"
            android:layout_weight="8"
            android:layout_height="match_parent"/>
    </LinearLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0px"
        app:layout_constraintTop_toBottomOf="@id/ll_topBar"
        app:layout_constraintBottom_toTopOf="@id/ll_bottomBar">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- Basic !-->

            <EditText
                android:id="@+id/et_itemName"
                android:hint="@string/item_name"
                android:textSize="20sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:inputType="text"
                android:importantForAutofill="no" />

            <TextView
                android:text="@string/category"
                android:gravity="center"
                android:textSize="20sp"
                android:id="@+id/tv_categoryTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <Spinner
                android:id="@+id/spnr_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginBottom="10dp"
                android:spinnerMode="dropdown"/>

            <!-- Weapons !-->


            <com.handybagofholding.tile.WeaponEditTile
                android:id="@+id/weaponEditTile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <!-- Armour !-->

            <com.handybagofholding.tile.ArmourEditTile
                android:id="@+id/armourEditTile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <!-- Consumables !-->

            <EditText
                android:id="@+id/et_consumables_count"
                android:hint="@string/count"
                android:textSize="20sp"
                android:inputType="number"
                android:layout_margin="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:importantForAutofill="no" />

            <!-- Other !-->

            <!-- Notes !-->

            <com.handybagofholding.tile.NoteEditTile
                android:id="@+id/noteEditTile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>


        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/ll_bottomBar"
        android:padding="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent">
        <Button
            android:id="@+id/b_newItemCancel"
            android:text="@string/cancel"
            android:textSize="20sp"
            android:layout_margin="5dp"
            android:layout_width="0px"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            style="?android:attr/buttonBarButtonStyle" />
        <Button
            android:id="@+id/b_newItemConfirm"
            android:text="@string/confirm"
            android:textSize="20sp"
            android:layout_margin="5dp"
            android:layout_width="0px"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            style="?android:attr/buttonBarButtonStyle" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>